BPER/DEVF/force-app/main/default/objects/CIB_Insider_List_Fornitori__c/CIB_Insider_List_Fornitori__c.object-meta.xml
<CustomObject>
    <label>Insider List Fornitori</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Insider List Fornitori Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insider Lists Fornitori</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>