BPER/DEVF/force-app/main/default/objects/CIB_Insider_List_Fornitori__c/fields/Codice_fiscale__c.field-meta.xml
<CustomField>
    <fullName>Codice_fiscale__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Codice fiscale</label>
    <length>16</length>
    <type>Text</type>
</CustomField>