BPER/DEVF/force-app/main/default/objects/CIB_Insider_List_Fornitori__c/fields/Cognome_di_nascita__c.field-meta.xml
<CustomField>
    <fullName>Cognome_di_nascita__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>(se diverso)</inlineHelpText>
    <label>Cognome di nascita</label>
    <length>255</length>
    <type>Text</type>
</CustomField>