BPER/DEVF/force-app/main/default/objects/CIB_Insider_List_Fornitori__c/fields/Data_di_nascita__c.field-meta.xml
<CustomField>
    <fullName>Data_di_nascita__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data di nascita</label>
    <type>Date</type>
</CustomField>