BPER/DEVF/force-app/main/default/objects/CIB_Insider_List_Fornitori__c/fields/Indirizzo_di_residenza__c.field-meta.xml
<CustomField>
    <fullName>Indirizzo_di_residenza__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>(Via, civico, CAP,Comune, Provincia, Stato)</inlineHelpText>
    <label>Indirizzo di residenza</label>
    <length>255</length>
    <type>Text</type>
</CustomField>