BPER/DEVF/force-app/main/default/objects/CIB_Insider_List_Fornitori__c/fields/Indirizzo_e_mail__c.field-meta.xml
<CustomField>
    <fullName>Indirizzo_e_mail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Indirizzo e-mail</label>
    <type>Email</type>
</CustomField>