BPER/DEVF/force-app/main/default/objects/CIB_Insider_List_Fornitori__c/fields/Luogo_di_nascita__c.field-meta.xml
<CustomField>
    <fullName>Luogo_di_nascita__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>(Stato, Comune, Provincia)</inlineHelpText>
    <label>Luogo di nascita</label>
    <length>255</length>
    <type>Text</type>
</CustomField>