BPER/DEVF/force-app/main/default/objects/CIB_Insider_List_Fornitori__c/fields/Nome_e_cognome__c.field-meta.xml
<CustomField>
    <fullName>Nome_e_cognome__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nome e cognome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>