BPER/DEVF/force-app/main/default/objects/CIB_Insider_List_Fornitori__c/fields/Numeri_di_telefono_personali__c.field-meta.xml
<CustomField>
    <fullName>Numeri_di_telefono_personali__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>(fisso- mobile)</inlineHelpText>
    <label>Numeri di telefono personali</label>
    <type>Phone</type>
</CustomField>