BPER/DEVF/force-app/main/default/objects/CIB_Insider_List_Fornitori__c/fields/Numeri_di_telefono_professionali__c.field-meta.xml
<CustomField>
    <fullName>Numeri_di_telefono_professionali__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>(fisso- mobile)</inlineHelpText>
    <label>Numeri di telefono professionali</label>
    <type>Phone</type>
</CustomField>