BPER/DEVF/force-app/main/default/objects/CIB_Insider_List_Fornitori__c/fields/Societa__c.field-meta.xml
<CustomField>
    <fullName>Societa__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Società</label>
    <length>255</length>
    <type>Text</type>
</CustomField>