BPER/DEVF/force-app/main/default/objects/CIB_Insider_List_Fornitori__c/fields/Titolo__c.field-meta.xml
<CustomField>
    <fullName>Titolo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Titolo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>