BPER/DEVF/force-app/main/default/objects/CIB_Insider_List_Fornitori__c/fields/Unita_organizzativa_Ruolo__c.field-meta.xml
<CustomField>
    <fullName>Unita_organizzativa_Ruolo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Unità organizzativa/Ruolo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>